# mover-backend

./: .env.example  .gitignore  BACKEND_FEATURES.md  CLAUDE.md  DOCKER.md  DOCKER_TROUBLESHOOTING.md  Dockerfile  Makefile  PR_DESCRIPTION.md  README.md  SETUP.md  SETUP_INSTRUCTIONS.md  TESTING.md  docker-compose.yml  package-lock.json  pyproject.toml
.github/workflows/: ci-cd.yml
alembic/: env.py
alembic/versions/: 2025_11_20_0756-627716ebfd69_initial_schema.py  2025_11_21_0954-842955808270_add_truck_photos.py
app/: __init__.py  main.py
app/api/: dependencies.py
app/api/routes/: analytics.py  auth.py  booking_status.py  bookings.py  calendar.py  cancellation.py  documents.py  driver_assignment.py  invoices.py  movers.py  ratings.py  support.py  verification.py
app/core/: __init__.py  config.py  database.py  observability.py  security.py
app/models/: __init__.py  base.py  booking.py  booking_status_history.py  cancellation.py  driver.py  insurance.py  invoice.py  organization.py  pricing.py  rating.py  support.py  truck.py  user.py  verification.py
app/schemas/: __init__.py  analytics.py  auth.py  base.py  booking.py  booking_status.py  calendar.py  cancellation.py  document_upload.py  driver.py  invoice.py  organization.py  pricing.py  rating.py  support.py  truck.py  verification.py
app/services/: __init__.py  analytics.py  booking.py  booking_status.py  calendar.py  cancellation.py  driver_assignment.py  invoice.py  movers.py  notification_templates.py  notifications.py  payments.py  pricing.py  rating.py  redis_cache.py  s3.py  support.py  verification.py
config/: pgbouncer.ini  prometheus.yml
docs/: CONNECTION_POOLING.md
frontend/: .env.local.example  .eslintignore  .eslintrc.json  .npmrc  .prettierignore  Dockerfile  README.md  next.config.js  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
frontend/src/__tests__/components/: Button.test.tsx
frontend/src/__tests__/lib/: analytics-api.test.ts  api-client.test.ts  calendar-api.test.ts  invoice-api.test.ts  support-api.test.ts  verification-api.test.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/book/: page.tsx
frontend/src/app/booking/[id]/: page.tsx
frontend/src/app/dashboard/: page.tsx
frontend/src/app/mover/: layout.tsx  page.tsx
frontend/src/app/mover/analytics/: page.tsx
frontend/src/app/mover/fleet/: page.tsx
frontend/src/app/mover/invoices/: page.tsx
frontend/src/app/mover/jobs/: page.tsx
frontend/src/app/mover/onboarding/: page.tsx
frontend/src/app/mover/support/: page.tsx
frontend/src/app/mover/verification/: page.tsx
frontend/src/app/signin/: page.tsx
frontend/src/app/signup/: page.tsx
frontend/src/components/booking/: Step1MoveDetails.tsx  Step2Inventory.tsx  Step3Quote.tsx  Step4Review.tsx  WizardStepper.tsx  booking-form.tsx
frontend/src/components/booking/steps/: customer-info-step.tsx  dropoff-details-step.tsx  move-details-step.tsx  pickup-details-step.tsx  review-step.tsx
frontend/src/components/mover/: FleetTable.tsx  Sidebar.tsx
frontend/src/components/rating/: RatingCard.tsx  RatingForm.tsx  RatingSummary.tsx  StarRating.tsx  index.ts
frontend/src/components/ui/: button.tsx  input.tsx  label.tsx  select.tsx  textarea.tsx  use-toast.ts
frontend/src/lib/: constants.ts  utils.ts
frontend/src/lib/api/: analytics-api.ts  auth-api.ts  booking-api.ts  bookings.ts  calendar-api.ts  client.ts  fleet-api.ts  invoice-api.ts  mover-api.ts  rating-api.ts  support-api.ts  verification-api.ts
frontend/src/lib/validations/: booking.ts
frontend/src/types/: booking.ts  rating.ts
infra/: app.py  cdk.json
infra/src/cleanup/: index.py
infra/src/migrator/: index.py
infra/stacks/: compute_stack.py  data_stack.py  network_stack.py  notification_stack.py
scripts/: init-db.sql  seed_data.py
tests/: __init__.py  conftest.py  test_analytics_api.py  test_booking_api.py  test_calendar_api.py  test_e2e_integration.py  test_pricing.py  test_rating.py
